# colorrankpy

./: README.md  index.html  pyproject.toml  sample.ipynb
colors/: rank.py
