[tool.poetry]
name = "colorrankpy"
version = "0.1.0"
description = ""
authors = ["mafumafuultu <mafumafuultuForGit@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
opencv-python = "^4.4.0"
numpy = "^1.19.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
